# kui

./: .travis.yml  AGENTS.md  CLAUDE.md  TAURI_MIGRATION.md  TAURI_NEXT_STEPS.md  WAYLAND_SUPPORT.md  package-lock.json  package.json
.github/workflows/: test.yaml
plugins/plugin-bash-like/: package.json
plugins/plugin-bash-like/src/pty/: copy.ts
plugins/plugin-bash-like/src/pty/xterm-helpers/: index.ts
plugins/plugin-kubectl/: package.json
plugins/plugin-kubectl/helm/: package.json
plugins/plugin-kubectl/src/controller/client/direct/: custom-columns.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: create_icons.sh
src-tauri/src/: commands.rs  ipc.rs  main.rs  menu.rs  window.rs
tools/travis/: install.sh
